# MetadataViever-

./: .gitignore  README.md  metadata_viewer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
metadataviewer/: __init__.py  __main__.py  app.py  cli.py  extractors.py
packaging/: build_deb.sh  metadataviewer.desktop  metadataviewer.launcher
tests/: test_cli.py  test_extractors.py
